fix: #3131 update sidebar filter wrap colors and size

--- a/src/style/themes/default/antd/antd.less
+++ b/src/style/themes/default/antd/antd.less
@@ -9,7 +9,6 @@
 @import './pagination.less';
 @import './card.less';
 
-
 //info: font-size-base: 14px;
 @heading-2-size: ceil(@font-size-base * 2);
 @heading-3-size: ceil(@font-size-base * 1.571);
@@ -75,4 +74,10 @@ h3.ant-typography {
 
 .ant-list {
   color: @body-1;
+}
+
+.@{collapse-prefix-cls} {
+  &-header {
+    font-weight: 600;
+  }
 }
